QR code changes
